# DualXGB

./: LICENSE.txt  README.md  datamining.ipynb  drawts.py  evaluate.py  k-fold.py  models.py  pyproject.toml  simple_cv.py
data/: 豆粕.csv
models/: models.py  pred_models.py  short_models.py
