[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter==1.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wsy", email = "631535207@qq.com"},
]
dependencies = [
    "xgboost",
    "pandas",
    "tscv",
    "arch~=7.0",
    "tqdm~=4.66",
    "matplotlib~=3.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}