[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter==1.0.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wsy", email = "631535207@qq.com"},
]
dependencies = [
    "xgboost",
    "numpy<2",
    "torch",
    "tscv",
    "arch",
    "tqdm",
    "matplotlib",
]
requires-python = ">=3.10"
license = {text = "MIT"}